<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changepassword">

    <ImageView
        android:id="@+id/img_view_person"
        android:layout_width="195dp"
        android:layout_height="129dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        app:srcCompat="@drawable/ic_person_black" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sent1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_view_person" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_changepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="5dp"

        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_name">

        <LinearLayout
            android:id="@+id/cl_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/email_name"
                android:drawableLeft="@drawable/ic_email_black"
                android:hint="@string/email_name"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/old_password"
                android:hint="@string/old_password"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/new_password"
                android:hint="@string/new_password"
                android:fontFamily="sans-serif"

                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:autofillHints="@string/confirm_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textAlignment="viewStart"
                android:textSize="16sp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_change"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/bloodRed"
        android:clickable="true"
        android:cursorVisible="true"
        android:fontFamily="sans-serif"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:capitalize="none" />


</android.support.constraint.ConstraintLayout>